<resources>
    <string name="app_name">KotlinDemo</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="aa">123</string>
    <string name="cc">456621</string>
    <string name="dd">qwewq</string>
    <string name="bb">qweqwe</string>
    <string name="ee">vvvvvvvv</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">webview</string>
    <string name="menu_gallery">建设中..</string>
    <string name="menu_slideshow">建设中..</string>
    <string name="menu_tools">系统信息</string>
    <string name="menu_share">建设中..</string>
    <string name="menu_send">建设中..</string>
    <string name="t_appInfo_label">App信息</string>
    <string name="s_system_version_label">系统版本</string>
    <string name="s_phone_kit_label">手机型号</string>
    <string name="s_phone_info">手机信息</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
