<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    //该标签是否可见-->
    <!--    //标签图标-->
    <!--    //长标签-->
    <!--    //短标签-->
    <!--    //shortcut不可用时提示-->
    <!--    //目标类-->
    <!--    //目标 类 包名-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/svg_ic_rainy"
        android:shortcutDisabledMessage="@string/ee"
        android:shortcutId="jumpself"
        android:shortcutLongLabel="@string/aa"
        android:shortcutShortLabel="@string/bb"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.wmy.kotlin.demo.ui.ShakeActivity"
            android:targetPackage="com.wmy.kotlin.demo.ui">
        </intent>
<!--        <categories android:name="android.shortcut.conversation" />-->
    </shortcut>

<!--    <shortcut-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/svg_ic_arrow_down"-->
<!--        android:shortcutId="jumpcamera"-->
<!--        android:shortcutLongLabel="@string/cc"-->
<!--        android:shortcutShortLabel="@string/dd"-->
<!--        tools:targetApi="n_mr1">-->
<!--        <intent android:action="android.media.action.IMAGE_CAPTURE">-->
<!--            <extra-->
<!--                android:name="android.intent.extras.CAMERA_FACING"-->
<!--                android:value="0" />-->
<!--        </intent>-->
<!--&lt;!&ndash;        <categories android:name="android.shortcut.conversation" />&ndash;&gt;-->
<!--    </shortcut>-->

</shortcuts>
